# iClaw

./: .env.dev  .env.example  .env.prod  .env.test  .gitignore  AGENTS.md  README.md  agent.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.tmp/: iclaw-App.tsx.head  (+12 more)
apps/desktop/src-tauri/: .tmp-brand-test.json  Cargo.toml  brand.generated.json  build.rs  tauri.build.local.json  tauri.conf.json  tauri.generated.conf.json  tauri.template.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/installer-generated/: dmg-volume.icns
apps/desktop/src-tauri/resources/: .gitignore
apps/desktop/src-tauri/resources/config/: openclaw-runtime.json
apps/desktop/src-tauri/resources/runtime/: generate-openclaw-config.mjs  node-fetch-user-agent.cjs  openclaw-plugin-manifest.mjs  packaged-plugins-manifest.json
apps/desktop/src-tauri/resources/skills/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/tests/: generate-openclaw-config.test.mjs
apps/desktop/src-tauri/tests/fixtures/runtime-config/: expected-dev.json  expected-prod.json  oem-runtime-snapshot.fixture.json  portal-runtime.fixture.json  runtime-config.fixture.json
services/data-connector/: .env.example  Dockerfile  PLAN.md  README.md  docker-compose.yml  init_tables.py  pyproject.toml  run_task.py
services/data-connector/deploy/grafana/dashboards/: data-connector.json
services/data-connector/deploy/k8s/: deployment.yaml  service.yaml
services/data-connector/deploy/prometheus/: rules.yml
services/data-connector/src/: main.py
services/data-connector/src/config/: __init__.py  settings.py
services/data-connector/src/db/: __init__.py  session.py
services/data-connector/src/middleware/: metrics.py
services/data-connector/src/models/: sync_task_log.py
services/data-connector/src/providers/: __init__.py  akshare_provider.py  base_provider.py  eastmoney_direct_provider.py  efinance_provider.py  provider_scheduler.py
services/data-connector/src/scheduler/: __init__.py  task_scheduler.py
services/data-connector/src/sync/: __init__.py  base_sync_task.py  finance_data.py  finance_data_task.py  incremental_sync.py  industry_concept.py  industry_concept_task.py  stock_basics.py  stock_basics_task.py  stock_quotes.py  stock_quotes_task.py
services/data-connector/src/utils/: concurrency_limiter.py  data_validator.py  lock_manager.py  logger.py  retry_decorator.py  task_logger.py  temp_table_manager.py
services/data-connector/tests/: test_performance.py  test_sync_full_flow.py
(+1190 files in other folders)
